added new index.html file

--- a/index.html
+++ b/index.html
@@ -1,32 +1,87 @@
-      
-<div style="text-align:right; margin-top: 40px;">
-    <a href="https://ykraj.my.canva.site/"> <img src="C:\Users\acer\Downloads\images of yash logo.png" alt="Your Logo" style="width:150px;height:150px;"> </a>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Your Website</title>
+  <style>
+    body {
+      background-image: url('https://yourwebserver.com/jaigarh_fort.jpg'); /* Hosted background image */
+      background-size: cover; /* Cover the entire page */
+      background-repeat: no-repeat; /* Prevent repeating the background image */
+      background-attachment: fixed; /* Keep the background image fixed when scrolling */
+      font-family: Arial, sans-serif; /* Use a clean font */
+      color: #333; /* Text color */
+    }
+    .container {
+      text-align: right; 
+      margin-top: 40px;
+    }
+    .navbar a {
+      padding-right: 10px; 
+      text-decoration: none;
+      color: #000; /* Link color */
+    }
+    .content {
+      text-align: center;
+      margin-left: 20px;
+      margin-bottom: 30px;
+    }
+    .btn {
+      font-size: 15px;
+      background-color: red;
+      padding: 3px 10px;
+      color: blue;
+      text-decoration: none;
+    }
+    h1 {
+      font-size: 40px;
+      text-align: center;
+    }
+    .main-image {
+      width: 60%;
+      max-width: 600px; /* Limit the max width of the image */
+    }
+    .logo {
+      width: 150px;
+      height: 150px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <a href="https://ykraj.my.canva.site/">
+      <img src="https://yourwebserver.com/images_of_yash_logo.png" alt="Your Logo" class="logo"> <!-- Hosted logo image -->
+    </a>
+  </div>
 
-<div style="text-align:right; margin-top: 40px;">
-<a style="padding-right: 3px;" href= https://www.tourmyindia.com/>Home</a>
-<a style="padding-right: 3px;"  href= https://www.bajajfinserv.in/jaipur-trip-cost#:~:text=A%20Jaipur%20trip%20can%20cost,duration%20of%20stay%2C%20and%20activities/>about</a>
-<a style="padding-right: 3px;" href= https://www.thrillophilia.com/jaipur-india-travel-guide/>services</a>
-</div>
+  <div class="container navbar">
+    <a href="https://www.tourmyindia.com/">Home</a>
+    <a href="https://www.bajajfinserv.in/jaipur-trip-cost#:~:text=A%20Jaipur%20trip%20can%20cost,duration%20of%20stay%2C%20and%20activities/">About</a>
+    <a href="https://www.thrillophilia.com/jaipur-india-travel-guide/">Services</a>
+  </div>
 
-<h1 style="font-size:40px;text-align:center; ">-:My Journey to Jaipur:-</h1>
+  <h1>-:My Journey to Jaipur:-</h1>
 
-<p style="font-size:smaller;text-align:center; line-height: 20px; margin-left: 20px; margin-bottom: 30px;"> Hello everyone!<br>
+  <p class="content">
+    Hello everyone!<br>
+    I’m Yash, and I recently had the incredible opportunity to visit Jaipur, the vibrant capital of Rajasthan. Known as the Pink City, Jaipur is a blend of history, culture, and color, and I was eager to immerse myself in its unique charm 😊.
+  </p>
 
-I’m Yash, and I recently had the incredible opportunity to visit Jaipur, the vibrant capital of Rajasthan. Known as the Pink City, Jaipur is a blend of history, culture, and color, and I was eager to immerse myself in its unique charm 😊.</p>
+  <div class="content">
+    <a class="btn" href="https://ykraj.my.canva.site/">Read more....</a>
+  </div>
 
-<div  style="text-align:center;"><a style="font-size:15px; background-color: red; padding: 3px 10px 3px 10px; color: blue;" href= https://ykraj.my.canva.site/> Read more....</a>
+  <hr>
 
-<hr>
+  <h1>-:JAIPUR (Pink City):-</h1>
 
-<h1 style="font-size:30px;text-align:center; ">-:JAIPUR(Pink City):-</h1>
+  <div class="content">
+    <img class="main-image" src="https://yourwebserver.com/screenshot.jpg" alt="Jaipur Image"> <!-- Hosted main image -->
+  </div>
 
-
-
-<img style="width: 60%; "src="C:\Users\acer\Downloads\Screenshot_15-11-2024_23844_www.canva.com.jpeg"
- >
-
-<video width="250" height="400" controls>
-    <source src= "C:\Users\acer\OneDrive\Pictures\Snapchat-1754380187.mp4"</video>
-
-
+  <div class="content">
+    <video width="250" height="400" controls>
+      <source src="https://yourwebserver.com/video.mp4" type="video/mp4"> <!-- Hosted video file -->
+    </video>
+  </div>
+</body>
+</html>
