--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Your Website</title>
   <style>
     body {
-      background-image: url('https://yourwebserver.com/jaigarh_fort.jpg'); /* Hosted background image */
+      background-image: url(https://yash-c-sharp.github.io/my-jaipur-journey/ ); /* Hosted background image */
       background-size: cover; /* Cover the entire page */
       background-repeat: no-repeat; /* Prevent repeating the background image */
       background-attachment: fixed; /* Keep the background image fixed when scrolling */
@@ -79,8 +79,9 @@
   </div>
 
   <div class="content">
-    <video width="250" height="400" controls>
+    <video width="600" height="400" controls>
       <source src="https://yourwebserver.com/video.mp4" type="video/mp4"> <!-- Hosted video file -->
+      Your browser does not support the video tag.
     </video>
   </div>
 </body>
